fix: update spacing of template list buttons; fix up indicator to make it more flexible in other situations (#2310)

--- a/app/assets/stylesheets/tailwind/components/indicator.css
+++ b/app/assets/stylesheets/tailwind/components/indicator.css
@@ -2,12 +2,11 @@
 
 .indicator-relative {
   position: relative;
-  display: inline-block;
+  display: flex;
   overflow: visible;
 }
 
 .indicator-corner {
-  position: absolute;
-  top: -16px;
-  right: -30px;
+  margin-left: -30px;
+  margin-top: -15px;
 }
